--- a/Flame.Compiler/Flame.Compiler.csproj
+++ b/Flame.Compiler/Flame.Compiler.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Transforms\Transform.cs" />
     <Compile Include="TypeSystem\DescribedBodyAccessor.cs" />
     <Compile Include="TypeSystem\DescribedBodyMethod.cs" />
+    <Compile Include="TypeSystem\MemorySpecificationAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Collections\ImmutableOrderedDictionary.cs" />
   </ItemGroup>
